--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-html-parser": "^2.0.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "node-sass": "^4.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
