--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.11.0",
     "react-google-recaptcha": "^2.0.1",
     "react-html-parser": "^2.0.2",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
