--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
