--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "node-sass": "^4.13.1",
     "react": "^16.11.0",
+    "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.11.0",
     "react-google-recaptcha": "^2.0.1",
     "react-html-parser": "^2.0.2",
