--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "react": "^16.11.0",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.11.0",
+    "react-elastic-carousel": "^0.9.4",
     "react-google-recaptcha": "^2.0.1",
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
