copying .htaccess as end stage of build process

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build & mv build/index.html build/prerender.html",
+    "build": "react-scripts build & mv build/index.html build/prerender.html & cp .htaccess build/.htaccess",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
