--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build & mv build/index.html build/prerender.html & cp .htaccess build/.htaccess",
+    "build": "react-scripts build && mv build/index.html build/prerender.html && cp .htaccess build/.htaccess",
+    "postbuild": "bash post-build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
