modified build process.  The 'npm run build' process is a standard one instead of one that forcibly also does the prerender stuff.  The prerender stuff is now a seperate package.json script.  'build_prerender' is a new package.json script which combines both.  Also: .htaccess moved to the 'public' folder.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-ring-frontend",
-  "version": "0.8.7",
+  "version": "0.9.5",
   "private": true,
   "dependencies": {
     "node-sass": "^4.14.1",
@@ -16,8 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build/index.html build/prerender.html && cp .htaccess build/.htaccess",
-    "postbuild": "bash post-build.sh",
+    "build": "react-scripts build && mv build/index.html build/prerender.html",
+    "prerender": "bash post-build.sh",
+    "build_prerender": "npm run build && npm run prerender",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
