--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule ^ index.html [QSA,L]
+RewriteRule ^ index.php [QSA,L]
